# x-shayari-bot

./: Makefile  README.md  bot.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: cron.yml
